# uddernet

./: .gitignore  README.md  pyproject.toml  requirements.txt
checkpoints/: mastitis_mlp.pt
docs/: report.md
src/uddernet/: __init__.py  app.py  models.py  train_cnn.py  train_tabular.py
src/uddernet/static/: index.html
